fix icons not showing up

--- a/new-bolt-website/src/sections/Events.module.css
+++ b/new-bolt-website/src/sections/Events.module.css
@@ -112,7 +112,7 @@
 }
 
 .nextEvent {
-  background-image: url('/src/assets/images/event-icons/background.png');
+  background-image: url('/src/assets/images/bootcamp-bg.png');
   background-size: cover;
   background-position: center;
   width: 100%;
